# soda

./: .gitignore  Cargo.toml  LICENSE  README.MD  idl.json
cli/: Cargo.toml  package.json  pre-install.js  start.js  uninstall.js
cli/src/: main.rs
cli/wba_vault/anchor_workspace/: Anchor.toml
cli/wba_vault/client/: manifest.json  package-lock.json  package.json
cli/wba_vault/client/src/pages/: _document.js  index.tsx
cli/wba_vault/tests/: tests.js
cli/yoo/client/: manifest.json  package-lock.json  package.json
cli/yoo/tests/: tests.js
crate/: Cargo.toml
crate/src/: error.rs  generate_from_idl.rs  generate_project.rs  get_template_from_fs.rs  helpers.rs  lib.rs  load_template.rs  save_template.rs  structs.rs  write_project_to_fs.rs
crate/tests/: generate_project.rs  idl_struct.rs  save_template.rs  test.soda
crate/tests/idls/: 1NKyU3qShZC3oJgvCCftAHDi5TFxcJwfyUz2FeZsiwE.json  ARoWLTBWoWrKMvxEiaE2EH9DrWyV7mLpKywGDWxBGeq9.json  AnatoLyYrd5iaAe36Lvq2oS4nuVDnRAb3KBVCARt4XiZ.json  BANKhiCgEYd7QmcWwPLkqvTuuLN6qEwXDZgTe6HEbwv1.json  BRRRot6ig147TBU6EGp7TMesmQrwu729CbG6qu2ZUHWm.json  CRATwLpu6YZEeiVq9ajjxs61wPQ9f29s1UoQR9siJCRs.json  Crt7UoUR6QgrFrN7j8rmSQpUTNWNSitSwWvsWGf1qZ5t.json  DecZY86MU5Gj7kppfUCEmd4LbXXuyZH1yHaP2NTqdiZB.json  GaugesLJrnVjNNWLReiw3Q7xQhycSBRgeHGTMDUaX231.json  GokivDYuQXPZCWRkwMhdH2h91KpDQXBEmpgBgs55bnpH.json  Govz1VyoyLD5BL6CSCxUJLVLsQHRwjfFj1prNsdNg5Jw.json  LockKXdYQVMbhhckwH3BxoYJ9FYatcZjwNGEuCwY33Q.json  LocktDzaV1W2Bm9DeZeiyz4J9zs4fRqNiYqQyracRXw.json  MRKGLMizK9XSTaD1d1jbVkdHZbQVCSnPpYiTw9aKQv8.json  NFTUJzSHuUCsMMqMRJpB7PmbsaU7Wm51acdPk2FXMLn.json  PLKZAXAYmZSfQv61tL2XALX4c14fcEhJj2CJhU1KcKd.json  QMMD16kjauP5knBwxNUJRZ1Z5o3deBuFrqVjBVmmqto.json  QMNeHCGYnLVDn1icRAfQZpjPLBNkfGbSKRB83G5d8KB.json  QMWoBmAyJLAsA1Lh9ugMTw2gciTihncciphzdNzdZYV.json  QRDxhMw1P2NEfiw5mYXG79bwfgHTdasY2xNP76XSea9.json  QREGBnEj9Sa5uR91AV8u3FxThgP5ZCvdZUW2bHAkfNc.json  QoP6NfrQbaGnccXQrMLUkog2tQZ4C1RFgJcwDnT8Kmz.json  RDM23yr8pr1kEAmhnFpaabPny6C9UVcEcok3Py5v86X.json  SAVEd9pHcncknnMWdP8RSbhDUhw3nrzwmZ6F6RAUiio.json  SCHAtsf8mbjyjiv4LkhLKutTf6JnZAbdJKFkXQNMFHZ.json  SMANK4F5osjfVpKFH5LPzE6HPpbzSPu5iHPBhuor5xU.json  StakeSSzfxn391k3LvdKbZP5WVwWd6AsY1DNiXHjQfK.json  UBEBk5idELqykEEaycYtQ7iBVrCg6NmvFSzMpdr22mL.json  YiiTopEnX2vyoWdXuG45ovDFYZars4XZ4w6td6RVTFm.json  escrow.json  four_in_line.json  idl.json  mate.json  matty.json
(+199 files in other folders)
