[package]
name = "soda-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
env_logger = "0.10"
clap = { version = "4.1.8", features = ["derive"] }
soda_crate = { path = "../crate", version = "0.1.0" }