[package]
name = "soda-cli"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Generates Solana Projects from an IDL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
env_logger = "0.10"
clap = { version = "4.1.8", features = ["derive"] }
soda_sol = { path = "../crate" }