[package]
name = "soda_sol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Generates Solana Projects from an IDL"
repository = "https://github.com/Web3-Builders-Alliance/soda"
documentation = "https://docs.rs/soda_sol/latest/soda_sol/"
authors = ["Juan Patricio Marchetto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.93"
handlebars = { version = "4.3.6", features = ["script_helper"]}
bincode = "1.3.3"
serde_derive = "1.0.152"
walkdir = "2.3.2"
thiserror = "1.0.40"